# finnish-tutor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  schema.sql
backend/app/routers/: conversation.py  drills.py  reading.py  review.py  stats.py
backend/app/seed/: drill_seed.json  sample_article.json
backend/app/services/: dictionary.py  llm.py  morphology.py  reading.py  srs.py  tutor.py  yle.py
backend/scripts/: build_dictionary.py  seed_drills.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: app-shell.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  conversation.tsx  drills.tsx  index.tsx  reading.tsx  review.tsx
